[package]
name = "coduet"
version = "0.1.0"
description = "DevHelpProtocol - Smart contract for developer hiring"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coduet"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] } 
